ingress/customer-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-app
  labels:
    app: customer-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: customer-app
  template:
    metadata:
      labels:
        app: customer-app
    spec:
      containers:
        - name: customer-ctr
          image: virghiu/customer-app:1.0.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '256Mi'
              cpu: '250m'
