ingress/customer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-svc
  labels:
    app: customer-svc
spec:
  selector:
    app: customer-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
