ingress/payment-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-svc
  labels:
    app: payment-app
spec:
  selector:
    app: payment-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
