ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: customer.myapp.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: customer-svc
                port:
                  number: 80

    - host: payment.myapp.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payment-svc
                port:
                  number: 80
